--- a/Breekly-FE/package.json
+++ b/Breekly-FE/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json | npm start --prefix ../",
+    "start": "ng serve --proxy-config proxy.conf.json --disable-host-check| npm start --prefix ../",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
