--- a/Breekly-FE/package.json
+++ b/Breekly-FE/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "@auth0/angular-jwt": "^5.0.2",
+    "bcrypt": "^5.0.1",
+    "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
