--- a/Breekly-FE/package.json
+++ b/Breekly-FE/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^5.0.1",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.16.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
