--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.5",
     "morgan": "~1.9.1",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.5.0"
   }
 }
