BRKLY-37 Upload photos + add new product

--- a/Breekly-FE/angular.json
+++ b/Breekly-FE/angular.json
@@ -125,6 +125,10 @@
               "devServerTarget": "Breekly-FE:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
