--- a/Breekly-FE/package.json
+++ b/Breekly-FE/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~11.2.5",
     "@angular/compiler": "~11.2.5",
     "@angular/core": "~11.2.5",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.2.5",
     "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.5",
@@ -23,6 +24,7 @@
     "@angular/router": "~11.2.5",
     "@auth0/angular-jwt": "^5.0.2",
     "bcrypt": "^5.0.1",
+    "firebase": "^7.0 || ^8.0",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.16.7",
@@ -46,6 +48,13 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "@angular-devkit/architect": ">= 0.900 < 0.1300",
+    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3",
+    "jsonc-parser": "^3.0.0"
   }
 }
